# Binary-Translator

./: .gitignore  Assembler.cpp  Assembler.h  CMakeLists.txt  CPU_Simulator.cpp  CPU_Simulator.h  Commands.txt  Commands_DSL.txt  Instruction.cpp  Instruction.h  Instruction_Parser.cpp  Instruction_Parser.h  Makefile  README.md  Simulator.cpp  Simulator.h  Translator.cpp  Translator.h  benchmark.txt  benchmark_opt.txt  factorial.txt  main.cpp  shell.cpp  test.ll  test.txt
Assembler/: Assembler.cpp  Assembler.h  CMakeLists.txt  Instruction.cpp  Instruction.h
CMake/: Binary-Translator  CMakeCache.txt  Makefile  cmake_install.cmake
CPU-Simulator/: CPU_Simulator.cpp  CPU_Simulator.h  Commands.txt
Simulator/: CMakeLists.txt  Simulator.cpp  Simulator.h
Translator/: CMakeLists.txt  Translator.cpp  Translator.h
common/: Commands_DSL.txt  Constants.h
